# blog

./: _config.yml  about.md  cv.md  index.html  index.md
_includes/: disqus.html
_layouts/: default.html
_posts/: 2016-12-12-welcome-to-jekyll.markdown  2016-12-15-welcome-to-my-blog.markdown  2017-02-12-git-cmake-versioning.markdown  2017-02-25-cmake-coverage-report.markdown
assets/: CMakeLists.txt  main.cpp  version.cmake.in  version.cpp.in  version.h
css/: main.css
